fix: improve por management using container starting method